--- a/Exercise 13-CSS/style.css
+++ b/Exercise 13-CSS/style.css
@@ -1,23 +1,12 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        header {
-            align: center
-                    }
-        nav {
-            color: red
-        }
-        p {
-            font-size: 18px;
-        }
-        .navlink {
-            color: #00aced
-        }
-    </style>
-</head>
-<body>
-    
-</body>
-</html>
+h1{
+    text-align: center;
+    }
+nav{
+ color: red
+    }
+p {
+font-size: 18px;
+    } 
+.navlink {
+color: #00aced
+    }
